--- a/ProyectoDeLibros/src/componentes/body/card.css
+++ b/ProyectoDeLibros/src/componentes/body/card.css
@@ -9,7 +9,7 @@
 .card2{
     padding: 1%;
     height: max-content;
-    margin: 5px;
+    margin: 5%;
     width: 19%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     border-radius: 5px;
@@ -33,4 +33,7 @@ img{
 .card2 button{
     margin-left: 50%;
     transform: translateX(-50%);
+}
+.card2 span{
+    text-align: center;
 }
